# cyrup-sugars

./: .cyrup_release_state.backup.json  Cargo.toml  PROMOTION.md  README.md  TODO.md  fix_all_json_refs.sh  justfile  rename_json_to_array_tuple.sh
docs/: ARRAY_TUPLE_SYNTAX.md  ASYNC_TASK.md  JSON_SYNTAX.md  ONE_OR_MANY.md  ZERO_ONE_OR_MANY.md
examples/: README.md  ai_agent_builder.rs
examples/array_tuple_syntax/: Cargo.toml
examples/array_tuple_syntax/src/: main.rs
examples/async_task_example/: Cargo.toml
examples/async_task_example/src/: main.rs
examples/json_syntax/: Cargo.toml
examples/json_syntax/src/: main.rs
examples/one_or_many_example/: Cargo.toml
examples/one_or_many_example/src/: main.rs
examples/zero_one_or_many_example/: Cargo.toml
examples/zero_one_or_many_example/src/: main.rs
scripts/: release-checklist.sh
src/: lib.rs
src/async/: future_ext.rs  stream_ext.rs
src/builders/: mod.rs
src/collections/: byte_size.rs  json_ext.rs  mod.rs  one_or_many.rs  zero_one_or_many.rs
workspace-hack/: Cargo.toml
