[workspace]
members = [
    "examples/async_task_example",
    "examples/json_syntax",
    "examples/one_or_many_example",
    "examples/zero_one_or_many_example",
    "packages/async_stream",
    "packages/async_task",
    "packages/builders",
    "packages/collections",
    "packages/cyrup-sugars",
    "packages/gix",
    "packages/llm",
    "packages/macros",
    "workspace-hack",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
authors = ["David Maple <david@cyrup.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyrup-ai/cyrup-sugars"
edition = "2024"
