[package]
name = "sugars-examples"
version = "0.2.0"
edition = "2021"
description = "Example implementations demonstrating cyrup_sugars array tuple syntax"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Core sugars functionality
sugars_collections = { path = "../../packages/collections" }
sugars_builders = { path = "../../packages/builders" }
sugars_llm = { path = "../../packages/llm" }
cyrup_sugars = { path = "../../packages/cyrup-sugars", features = ["tokio-async", "array-tuples"] }
sugars_macros = { path = "../../packages/macros" }

# Required for array tuple syntax
hashbrown = { version = "0.15.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for examples
tokio = { version = "1.0", features = ["full", "macros"] }

[features]
default = ["array-tuples"]
array-tuples = ["sugars_collections/array-tuples", "sugars_builders/array-tuples"]