[package]
name = "sugars-examples"
version = "0.1.0"
edition = "2021"
description = "Example implementations demonstrating cyrup_sugars JSON object syntax"
license = "MIT OR Apache-2.0"

[dependencies]
# Core sugars functionality
cyrup_sugars = { path = "../../packages/cyrup-sugars", features = ["all"] }
sugars_llm = { path = "../../packages/llm" }
sugars_macros = { version = "0.1.3", path = "../../packages/macros" }

# Required for JSON object syntax
hashbrown = { version = "0.15.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for examples
tokio = { version = "1.0", features = ["full", "macros"] }

[features]
default = ["hashbrown-json"]
hashbrown-json = ["cyrup_sugars/hashbrown-json"]
